[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvela_surrogate"
version = "0.0.1"
description = "Bayesian pulsar timing and noise analysis using a linearized surrogate model."
keywords = ["astronomy", "astrophysics", "pulsar"]

authors = [
    {name = "Abhimanyu Susobhanan", email = "abhisrkckl@gmail.com"},
]
maintainers = [
    {name = "Abhimanyu Susobhanan", email = "abhisrkckl@gmail.com"}
]

requires-python = ">=3.12"
dependencies = [
    "pyvela>=0.1.4",
    "pint-pulsar>=1.1.5",
    "enterprise-pulsar>=3.4.4",
    "discovery",
    "jax",
    "flowjax",
    "optax",
    "equinox"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: GNU General Public License Version 3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/abhisrkckl/pyvela_surrogate"

[project.scripts]


[tool.setuptools]
zip-safe = false
package-dir = {"" = "pyvela_surrogate"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["pyvela_surrogate"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.distutils.bdist_wheel]
universal = 0

[tool.aliases]
test = "pytest"
